tests/ui/structs/struct-fields-missing.stderr
error[E0063]: missing field `bar` in initializer of `BuildData`
  --> $DIR/struct-fields-missing.rs:7:15
   |
LL |     let foo = BuildData {
   |               ^^^^^^^^^ missing `bar`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0063`.
